--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <link rel="stylesheet" href="css/styles.css">
    <title>YOUR NAME Portfolio</title>
  </head>
  <body>
