--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
  <head>
@@ -16,13 +15,13 @@
    </nav>
    <div class=”container”>
      <div class=”blurb”>
-       <h1>Hi, I am YOUR NAME!</h1>
-       <p>This is my first page for my personal website!</a></p>
+       <h1>Hi, I am Yuan Xu!</h1>
+       <p>This is my intrduction!</a></p>
      </div>
    </div>
    <footer>
    <ul>
-     <li><a href=”mailto:YOUREMAIL”>YOUREMAIL</a></li>
+     <li><a href=”mailto:YOUREMAIL”>yxu2049@gmail.com</a></li>
    </ul>
    </footer>
  </body>
