--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <link rel="stylesheet" href="css/styles.css">
-   <title>YOUR NAME Portfolio</title>
+   <title>Yuan Xu</title>
  </head>
  <body>
    <nav>
