--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay:2.2s;">contact</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Yuan Xu</h1>
-        <h2>Software Developer / AI Researcher</h2>
+        <h2>Software Developer, AI Researcher</h2>
         <div id="menu">
             <a onclick="showabout()">about</a>
             <a onclick="showwork()">work</a>
